Fix: overflowX of Table

--- a/frontend/src/components/section/Section.scss
+++ b/frontend/src/components/section/Section.scss
@@ -5,9 +5,6 @@
     flex-grow: 1;
     padding: 2vh;
 }
-.bigger{
-    flex-grow: 9;
-}
 
 .section:not(:last-child){
     margin-right: 4vh;
